overriding the dependency hash

--- a/5/5.md
+++ b/5/5.md
@@ -361,4 +361,95 @@ cargoDeps' =
       );
 ```
 
+But now, where does that `cargoDeps` get used? (`/cargoDeps`), let's grep for that. Okay, it get's passed in the
+`mkDerivation`, in the final `mkDerivation` I believe:
 
+> Current file:
+
+```nix
+# Tests don't currently work for `no_std`, and all custom sysroots are currently built without `std`.
+# See https://os.phil-opp.com/testing/ for more information.
+assert useSysroot -> !(args.doCheck or true);
+
+stdenv.mkDerivation (
+  (removeAttrs args [
+    "depsExtraArgs"
+    "cargoUpdateHook"
+    "cargoDeps"
+    "cargoLock"
+  ])
+  // lib.optionalAttrs useSysroot {
+    RUSTFLAGS = "--sysroot ${sysroot} " + (args.RUSTFLAGS or "");
+  }
+  // lib.optionalAttrs (stdenv.hostPlatform.isDarwin && buildType == "debug") {
+    RUSTFLAGS =
+      "-C split-debuginfo=packed "
+      + lib.optionalString useSysroot "--sysroot ${sysroot} "
+      + (args.RUSTFLAGS or "");
+  }
+  // {
+    cargoDeps = cargoDeps';
+    inherit buildAndTestSubdir;
+```
+
+All right, so this sets all the flags, okay, so yeah I guess we can try this, I'm not sure if there is a better way to
+do this. We're gonna take a look at this course afterwards, for now just from kind of a reverse engineering the code
+I feel like we should first, so the `cargoDeps` here is passed in the `mkDerivation` so this is a derivation
+attribute so we need to use `.overrideAttrs` to override `cargoDeps` and then on the `cargoDeps` we want to
+override, we can use the old version and then call `.override` maybe?
+
+Yuriy Taraday: `cargoDeps` is referred by some function, what it is?
+
+Silvan: Yeah, `fetchCargoTarball`, it's another derivation:
+
+```nix
+else
+    fetchCargoTarball (
+      {
+        inherit
+          src
+          srcs
+```
+
+Actually we need to take a look at the implementation of `fetchCargoTarball` as well to really figure it out.
+
+Viktor Kleen: So I think I did that at some point in my NixOS flake and I did it exactly like you said it, 
+did an overrideAttrs on the outer derivation and then inside and I said cargoDeps is derivation dot cargodeps dot
+overrideAttrs and in that I said inherit the source and set the output hash to something.
+
+Julien Debon: Yeah, we do exactly that in like the Nickel flake in case you're looking for an example.
+
+Silvan: Okay, so that might also be the solution we're gonna find on discourse(?) then. Let me copy this into the..
+
+Viktor Kleene: This solution is old, so maybe it improved since then but it still works.
+
+Silvan: Maybe yeah. Well I cannot see looking at the buildRust or buildCargoPackage, I couldn't see any like 
+improvement of that, maybe there is a PR as well, but yeah let's do the first step for now I guess, so we
+wanna override `cargoDeps` here (`airshipper.nix`), `cargoDeps =`, then we're gonna use `old.cargoDeps` at the old
+value, and then you said `old.cargoDeps.overrideAttrs` worked, well sure let me call it the same way, (`old: `),
+actually let's not, sure:
+
+```nix
+cargoDeps = old.cargoDeps.overrideAttrs (old: {
+
+});
+```
+
+And so in here you said `src`, I guess source you pass the same source as this one..
+
+Viktor Kleene: I just said  `inherit src;` because we are doing a recursive record anyway
+
+Silvan: Oh yeah, so we can do that here, nice, and then `outputHash =` I guess
+
+Viktor Kleene: And that's what the new cargo hash sha256 would be.
+
+Silvan: Yes, all right, so I guess I'm gonna pass empty for now to figure out the new one:
+
+```nix
+cargoDeps = old.cargoDeps.overrideAttrs (old: {
+  inherit src;
+  outputHash = "";
+});
+```
+
+Let's try this.
