outputhash, inspecting in nix repl

--- a/5/5.md
+++ b/5/5.md
@@ -452,4 +452,132 @@ cargoDeps = old.cargoDeps.overrideAttrs (old: {
 });
 ```
 
-Let's try this. 20.51
+Let's try this:
+
+```nix
+self: super: {
+  airshipper = super.airshipper.overrideAttrs (old: rec {
+    version = "0.9.0";
+    cargoDeps = old.cargoDeps.overrideAttrs (old: {
+      inherit src;
+      outputHash = "";
+    });
+    
+    src = self.fetchFromGitLab {
+        owner = "Veloren";
+        repo = "airshipper";
+        rev = "v${version}";
+        hash = "sha256..";
+    };
+  });
+}
+```
+
+This is the old one, let me also do this here:
+
+```nix
+nix-build -A airshipper --arg overlays '[ (import ./airshipper.nix) ]'
+```
+
+Okay, nice, and I'm waiting for a hash to be output, what?
+
+Viktor Kleene: I think the name for the `cargoDeps` derivation is now messed up, or still the old one.
+
+Silvan: Yeah, yeah, that's true. All right, it's doing the entire fetching of dependencies again right, so
+thats taking a little bit of time.
+
+Simonas Narbutas: But if you provide the hash, the correct hash, and it is in your store, then the name
+as long as that directory that calculates to that hash is in your store, the name does not matter, right?
+
+Silvan: Yeah, I think for fixed output derivation the, well, I think it actually does matter. Ideally it 
+shouldn't matter, no, but I feel like since the nix store is used as the cache layer, if you change the name
+the path is also going to change.
+
+Simonas Narbutas: Yeah, I was playing with the name and I just kept not understanding why it's picking 
+a new thing like, if I would provide a another hash from existing package in the store, but if I would
+provide a fake hash then it would throw an error, but that's a little bit..
+
+Viktor Kleene: Yeah, because the existing hash, because it's a fixed output derivation, if it knows
+if the existing hash is already in the store it just takes it and it assumes it's all right, and if that's 
+the wrong one..
+
+Simonas Narbutas: And it knows that hash from a database from that sqlite database that it is in nix store or?
+
+Viktor Kleene: I think so yeah.
+
+Silvan: There is also, you shouldn't do this normally but you can use sqlite to just inspect the database itself
+if you're curious. I don't recomment like actually:
+
+```bash
+sudo sqlite3 /nix/var/nix/db/db.sqlite
+sqlite> .schema
+```
+
+We can actually just check out the schema here to see how this looks like and derivation outputs.. validPaths:
+
+```bash
+sqlite> .schema
+CREATE TABLE ValidPaths (
+    id               integer primary key autoincrement not null,
+    path             text unique not null,
+    hash             text not null, -- base16 representation
+    registrationTime integer not null,
+    deriver          text,
+    narSize          integer,
+    ultimate         integer, -- null implies "false"
+    sigs             text, -- space-separated
+    ca               text -- if not null, an assertion that the path is content-addressed; see ValidPathInfo
+```
+
+In here there is a hash, I'm not an expert in sqlite but if you're curious or want to do some interesting queries
+on this or see how nix works underneath that's interesting. I guess meanwhile let's quickly check discourse.nixos.org
+(searches for `cargoSha256`), I think these are mostly the same thing. Yeah, let's try this one 
+https://discourse.nixos.org/t/is-it-possible-to-override-cargosha256-in-buildrustpackage/4393
+Yeah, that does the same thing with output hash and source, we aren't overriding the name here, in the end the name
+doesn't matter too much
+
+Viktor Kleene: It's just a hygene thing, the name won't change the functionality
+
+Silvan: Oh yeah, they are setting the name here, oh they are setting it with vendor which might be a good idea,
+(`name = "${name}-vendor";`), all right, and we do have the hash back right here. So (`vim airshipper.nix`), over here,
+(`outputHash = "...";`).
+
+And so I feel like to just for completeness sake we also need to check out why `outputHash`, why not `hash` or `sha256`, 
+why are there all these different names for hashes, and so this is really (`hashOutput`) kind of a nix implementation
+detail, this is how nix code passes hashes to the nix store derivations, that wasn't great explanation, let me try again.
+So let's do the import of nixpkgs in here:
+
+```nix
+nix-repl> import ./. { overlays = [ (import ./airshipper.nix) ]; }
+```
+
+Oh, and we don't want to evaluate all of nixpkgs, let's just do `:a` for adding the scope of this:
+
+```nix
+nix-repl> :a import ./. { overlays = [ (import ./airshipper.nix) ]; }
+nix-repl> airshipper
+nix-repl> airshipper.cargo
+```
+
+All right, so we have airshipper, we have cargoDeps here, (`airshipper.cargoDeps`), so this is the `cargoDeps` derivation
+which apparently still has the 0.7.0 name and so here we can look at the attributes of the derivation that nix
+uses underneath. They do exist on this level itself, and actually this is the same here `airshipper.cargoDeps` is
+the derivation attribute that gets passed to it but you can also use if you want to be a bit clearer and not mess with
+scopes too much, you can use `.drvAttrs`, then `cargoDeps`:
+
+```nix
+airshipper.drv
+airshipper.drvAttrs.cargo
+airshipper.drvAttrs.cargoDeps.drvAttrs.outputHash
+```
+
+And so here we have these three outputs, there is no output hash mode here, I guess there is a good default but 
+these are the things nix passes to, nix uses underneath, so we have the output hash and `outputHashAlgo`, that's
+`"sha256"`, I guess this also could be defaultet, inferred from this, and so yeah, there is no sha256 attribute here,
+oh the completion doesn't work there, there is also no hash attribute here and so this is why when we use
+`.overrideAttrs`, well we could set these attributes, like we could say:
+
+```nix
+nix-repl> airshipper.drvAttrs.cargoDeps.overrideAttrs (old: { sha256 = "something"; })
+```
+28.02
