--- a/5/5.md
+++ b/5/5.md
@@ -580,4 +580,46 @@ oh the completion doesn't work there, there is also no hash attribute here and s
 ```nix
 nix-repl> airshipper.drvAttrs.cargoDeps.overrideAttrs (old: { sha256 = "something"; })
 ```
-28.02
+This wouldn't actually influence the derivation because it's only gonna set an environment variable liket his to this value,
+(`"sometething"`), it doesn't change the underlying output hash here that nix uses, (`...drv.Attrs.outputHash`).
+So yeah, it's really not great this way I think that we need to do this outputHash thing, that's really, should
+be an implementation detail but I guess that is the best way to do it for now. Yeah, just wanna quickly ask are there
+any questions about the things we just talked about, or anything else here curious about or?
+
+Simonas Narbutas: Many! No, no, no, I'm joking, it's a lot of information to take in but I'm pretty sure with this
+I can already make those Rust package build derivaitions, and that was just one example, but I came across with that
+two or three times, so that's gonna be very useful, thanks.
+
+Silvan: Awesome, otherwise we can also if other people have other questions, could be related, could also be 
+entirely something different, feel free to ask them. Otherwise if nobody has any question we could also take a 
+issuse or PR's you might be interested in having merged or reviewed or taking a look at..
+
+All right, well then we can also just kind of freeform something, and I'm gonna pick a random PR out of these.
+
+Simonas Narbutas: Do you mind, like a very quick question, like in a nix repl, I wanted to pull out those,
+like for example to find a hash, like how you did now import and then you knew how to navigate into drvAttrs
+but is there a way to kind of print all of that what is under airshipper into some JSON format, like to spit it out.
+
+Silvan: Maybe, let's, I guess let's try it out, so this is the old one:
+
+```nix
+nix-repl> airshipper
+<<derivation /nix/store/bx..drv>>
+```
+
+Right, if you just print airshipper it's just gonna do the whole derivation thing here, I mentioned this in
+the previous episode I believe, that you can override the type, the fact that it prints it in that kind of
+odd way is only a nix repl thing, and it only gets triggered when the type is equal to the string derivation:
+
+```nix
+nix-repl> airshipper // { type = ""; }
+```
+
+If we don't have that, it's gonna do this (prints lots), this is rather messy but it kind of shows you the
+underlying derivation value a bit better.
+
+Simonas Narbutas: I should be able to find the sha that you listed in this output, I should be able to find it.
+
+Silvan: Well there is the cargo sha here but the cargoDeps, can we find it 31.49
+
+
