the derivation primitive

--- a/5/5.md
+++ b/5/5.md
@@ -620,6 +620,141 @@ underlying derivation value a bit better.
 
 Simonas Narbutas: I should be able to find the sha that you listed in this output, I should be able to find it.
 
-Silvan: Well there is the cargo sha here but the cargoDeps, can we find it 31.49
+Silvan: Well there is the cargo sha here but the cargoDeps, can we find it.. right the cargoDeps is also just 
+printed as the derivation value here and well we could, so we could use strict evaluation in the repl or
+deeply evaluate the result here with `:p`:
 
+```nix
+nix-repl> airshipper // { type = ""; }
+```
 
+That would only expand these dot dots, so now it's just bigger value. Also sometimes this doesn't work because
+you have things which only partially evaluate, well, actually no, because nix repl cuts off at the derivations
+here that should actually always work. Yeah if you wanna go into these individually then we could do this again..
+
+Simonas Narbutas: No, no, in the principle I get it, at least for me now it's clear, that answers my question, thanks.
+
+Silvan: Awesome yeah, but you can also:
+
+```nix
+nix-repl> :p airshipper.drvAttrs
+```
+
+That doesn't need the weird type overriding thing and this has all the attributes that you can override with `.overrideAttrs`.
+And so honestly this is quite useful, yeah I should recommend this more.
+
+Simonas Narbutas: Yeah, thats actually.. thanks
+
+Silvan: Yeah, I can also quickly mention or show you how derivation works underneath, so underneath this is really
+the primitive nix uses:
+
+```nix
+nix-repl> `builtins.derivation {}`
+error: attribute 'name' missing for call to 'derivationStrict'
+```
+
+And in here we can try calling this but we get a common error that name wasn't passed:
+
+```nix
+nix-repl> builtins.derivation { name = foo; }
+error: required attribute 'builder' missing
+```
+
+Then we require a builder, let's use bin shell which is available in nix sandbox:
+
+```nix
+nix-repl> builtins.derivation { name = foo; builder = "/bin/sh"; }
+error: required attribute 'system' missing
+```
+
+And then we also require a system, let's use the impure version here for now:
+
+```nix
+nix-repl> builtins.derivation { name = foo; builder = "bin/sh"; system = builtins.currentSystem; }
+<<derivation /nix/store/9..-foo.drv>>
+```
+
+All right, and this is really the three basic components you need for a derivation and we can also
+try building this:
+
+```nix
+nix-repl> :b builtins.derivation { name = foo; builder = "bin/sh"; system = builtins.currentSystem; }
+error: builder for '/nix/store..-foo.drv' failed to produce output path for output 'out' at..
+```
+
+It will fail because we don't, it doesn't do actually do anything just yet, we can also provide
+arguments to the builder command here, `-c` for passing the script, and let's just `touch` the
+output directory so it succeedes:
+
+```nix
+nix-repl> builtins.derivation { name = foo; builder = "bin/sh"; args = [ "-c" "touch $out" ]; system = builtins.currentSystem; }
+error: builder for .. failed with exit code 127;
+```
+
+Or not, let's do, I think this is, something that works in shell:
+
+```nix
+nix-repl> builtins.derivation { name = foo; builder = "bin/sh"; args = [ "-c" ">$out" ]; system = builtins.currentSystem; }
+```
+
+All right yeah, that works, so this we get the derivation out of here, let's sign this:
+
+```nix
+nix-repl> drv = builtins.derivation { name = foo; builder = "bin/sh"; args = [ "-c" ">$out" ]; system = builtins.currentSystem; }
+nix-repl> drv
+```
+
+And this is again this derivation value here, we can also look at `drv.drvAttrs`:
+
+```nix
+nix-repl> drv.drvAttrs
+{ args = [ ... ]; builder = "/bin/sh"; name = "foo"; system = "x86_64-linux"; }
+```
+
+These are the ones we passed to it directly, this is what the override with the `.overrideAttrs`, there is also
+other attributes here, well in particular we have all of these attributes, the `args, `builder`, `name`, `system`,
+we also have here:
+
+```nix
+nix-repl> drv.
+drv.all     drv.builder    drv.drvPath    drv.out     drv.outputName    drv.type
+drv.args    drv.drvAttrs   drv.name       drv.outPath drv.system
+```
+
+But there is also bunch of others, so we have `all`:
+
+```nix
+nix-repl> drv.all
+[ <<derivation /nix/store..-foo.drv>> ]
+```
+
+That's not super useful but, actually I haven't seen any use of that in practice but it gets the all outputs of a
+derivation in the list. We also have `outputName`:
+
+```nix
+nix-repl> drv.outputName
+"out"
+```
+
+Which is the name of the output, which is the default is out, also useful for multiple outputs, it also sets
+other outputs here if you have multiple of them, so I guess, the queue here and multiple outputs, let's say
+outputs `out` and let's say `lib` and then let's change the script to do, also write to lib:
+
+```nix
+nix-repl> builtins.derivation { name = foo; builder = "bin/sh"; outputs = [ "out" "lib" ]; args = [ "-c" ">$out; >$lib" ]; system = builtins.currentSystem; }
+```
+
+Okay, now if we look at it again, we have `drv.out` for the output which is the default, we have `drv.lib` and then
+also interesting we can do:
+
+```nix
+nix-repl> drv.out.out.out.lib.lib
+```
+And so on, it's kind of a recursive structure and so this is an extra things that the `builtins.derivation` does
+to kind of make things more convenient but underneath there is also `derivationStrict` primitive:
+
+```nix
+nix-repl> derivationStrict
+```
+
+And this takes exactly the same arguments as the derivation primitive but it doesn't do this convenience thing on top
