nix repl, derivations, attributes

--- a/5/5.md
+++ b/5/5.md
@@ -757,4 +757,223 @@ to kind of make things more convenient but underneath there is also `derivationS
 nix-repl> derivationStrict
 ```
 
-And this takes exactly the same arguments as the derivation primitive but it doesn't do this convenience thing on top
+And this takes exactly the same arguments as the derivation primitive but it doesn't do this convenience thing on top.
+So if I go back here and do `derivationStrict`:
+
+```nix
+nix-repl> builtins.derivationStrict { name = foo; builder = "bin/sh"; outputs = [ "out" "lib" ]; args = [ "-c" ">$out; >$lib" ]; system = builtins.currentSystem; }
+```
+
+Now, the result of this, `:p drv`, is really quite simple structure, we just have a derivation path and then one path for all 
+of the outputs:
+
+```nix
+nix-repl> :p drv
+{ drvPath = ".."; lib = ".."; out = ".."; }
+```
+
+Yeah, and that's it, everythin on top is something that the derivation primitive has, and we can even look at the 
+implementation of derivation primitive. It's I believe, like one of the only components written in nix itself from
+the builtins (`> 'derivation.nix`), (`> ./src/libexpr/primops/derivation.nix`), and this is how it's implemented,
+this is the implementation of the 'derivation' builtin function, that just calls `derivationStrict` underneath and
+otherwise is just like 27 lines of nix code and they do that the derivation thing here, they do the output name
+we saw, they do the, the mapping of all the output names to attributes and so on. Just kind of a interesting behind
+the scenes fact:
+
+> Current file at: https://github.com/NixOS/nix/blob/442a2623e48357ff72c77bb11cf2cf06d94d2f90/src/libexpr/primops/derivation.nix#L4
+
+```nix
+# This is the implementation of the ‘derivation’ builtin function.
+# It's actually a wrapper around the ‘derivationStrict’ primop.
+# Note that the following comment will be shown in :doc in the repl, but not in the manual.
+
+/**
+  Create a derivation.
+
+  # Inputs
+
+  The single argument is an attribute set that describes what to build and how to build it.
+  See https://nix.dev/manual/nix/2.23/language/derivations
+
+  # Output
+
+  The result is an attribute set that describes the derivation.
+  Notably it contains the outputs, which in the context of the Nix language are special strings that refer to the output paths, which may not yet exist.
+  The realisation of these outputs only occurs when needed; for example
+
+    * When `nix-build` or a similar command is run, it realises the outputs that were requested on its command line.
+      See https://nix.dev/manual/nix/2.23/command-ref/nix-build
+
+    * When `import`, `readFile`, `readDir` or some other functions are called, they have to realise the outputs they depend on.
+      This is referred to as "import from derivation".
+      See https://nix.dev/manual/nix/2.23/language/import-from-derivation
+
+  Note that `derivation` is very bare-bones, and provides almost no commands during the build.
+  Most likely, you'll want to use functions like `stdenv.mkDerivation` in Nixpkgs to set up a basic environment.
+*/
+drvAttrs @ { outputs ? [ "out" ], ... }:
+
+let
+
+  strict = derivationStrict drvAttrs;
+
+  commonAttrs = drvAttrs // (builtins.listToAttrs outputsList) //
+    { all = map (x: x.value) outputsList;
+      inherit drvAttrs;
+    };
+
+  outputToAttrListElement = outputName:
+    { name = outputName;
+      value = commonAttrs // {
+        outPath = builtins.getAttr outputName strict;
+        drvPath = strict.drvPath;
+        type = "derivation";
+        inherit outputName;
+      };
+    };
+
+  outputsList = map outputToAttrListElement outputs;
+
+in (builtins.head outputsList).value
+```
+
+Yuriy Taraday: Can you build the result of the `derivationStrict`?
+
+Silvan: Yeah, let's try this again, so I'm not sure if nix-repl allows us to build it:
+
+```nix
+nix-repl> :b drv.out
+error: expression does not evaluate to a derivation, so I can't build it
+```
+
+But we can evaluate this:
+
+```nix
+nix-repl> out
+error: undefined variable 'out'
+```
+
+```nix
+nix-repl> drv.out
+"/nix/store..-foo"
+```
+
+So yeah, nix repl really expects this type equals derivation thing:
+
+```nix
+nix-repl> { type = "derivation"; }
+<<derivation ???>>
+```
+
+Then it works with that.
+
+Julien Debon: So if we add type then it will build?
+
+Silvan: Ok, it goes a bit further than that, nix repl doesn't just need the type, let's try,
+then try to build it:
+
+```nix
+nix-repl> drv // { type = "derivation"; }
+<<derivation /nix/store..-foo.drv>>
+
+nix-repl> :b drv // { type = "derivation" ; }
+error: derivation name missing
+```
+
+Okay, it also apparently wants a derivation name to be known so let's try it here:
+
+```nix
+nix-repl> :b drv // { name = "foo"; type = "derivation" ; }
+
+This derivation produced the following outputs:
+  lib -> /nix/store..-foo-lib
+  out -> /nix/store..-foo
+```
+
+Oh, that worked actually. Interesting. I am a bit surprised:
+
+```nix
+{ drvPath = "/nix/store..foo.drv"; lib = "/nix/store..foo-lib"; out = "/nix/store..foo"; }
+```
+
+Okay, I guess it uses drvPath, that does exist, so, yeah, I guess nix repl needs type equals derivation, and then it needs name
+and it needs the drvPath.
+
+Yuriy Taraday: Although in this drvPath we have more right?
+
+Silvan: More what?
+
+Yuriy Taraday: I mean in the derivation itself we have more information if it can build it because right now drv is just
+like three fields but the derivation itself should have like builder..
+
+Silvan: Oh yeah, yeah, so I guess, yeah, that's interesting, if we look at like the hello, just another derivation that kind of
+looks normal, let's look at the things it contains:
+
+```nix
+❯ nix repl
+Nix 2.24.11
+Type :? for help.
+nix-repl> :l <nixpkgs>
+Added 23384 variables.
+
+nix-repl> hello
+«derivation /nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv»
+
+nix-repl> hello // { type = ""; }
+{
+  __ignoreNulls = true;
+  __structuredAttrs = false;
+  all = [ ... ];
+  args = [ ... ];
+  buildInputs = [ ... ];
+  builder = "/nix/store/5mh7kaj2fyv8mk4sfq1brwxgc02884wi-bash-5.2p37/bin/bash";
+  cmakeFlags = [ ... ];
+  configureFlags = [ ... ];
+  depsBuildBuild = [ ... ];
+  depsBuildBuildPropagated = [ ... ];
+  depsBuildTarget = [ ... ];
+  depsBuildTargetPropagated = [ ... ];
+  depsHostHost = [ ... ];
+  depsHostHostPropagated = [ ... ];
+  depsTargetTarget = [ ... ];
+  depsTargetTargetPropagated = [ ... ];
+  doCheck = true;
+  doInstallCheck = true;
+  drvAttrs = { ... };
+  drvPath = "/nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv";
+  inputDerivation = «derivation /nix/store/zzs21qyzilwbd4z02b4pbs3bvdz2rgdv-hello-2.12.1.drv»;
+  mesonFlags = [ ... ];
+  meta = { ... };
+  name = "hello-2.12.1";
+  nativeBuildInputs = [ ... ];
+  out = «derivation /nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv»;
+  outPath = "/nix/store/a7hnr9dcmx3qkkn8a20g7md1wya5zc9l-hello-2.12.1";
+  outputName = "out";
+  outputs = [ ... ];
+  override = { ... };
+  overrideAttrs = «lambda overrideAttrs @ /nix/store/x6sw6hx2yrnvj1hiixaj5gcvxbsjpbcx-nixos/nixos/lib/customisation.nix:177:13»;
+  overrideDerivation = «lambda overrideDerivation @ /nix/store/x6sw6hx2yrnvj1hiixaj5gcvxbsjpbcx-nixos/nixos/lib/customisation.nix:175:32»;
+  passthru = { ... };
+  patches = [ ... ];
+  pname = "hello";
+  postInstallCheck = "stat \"\${!outputBin}/bin/hello\"\n";
+  propagatedBuildInputs = [ ... ];
+  propagatedNativeBuildInputs = [ ... ];
+  src = «derivation /nix/store/q63c1b6gh3i7vjw2bsvxwbbcwcnmxxk1-hello-2.12.1.tar.gz.drv»;
+  stdenv = «derivation /nix/store/asnfc1fbhcpnrhnk4kkrs5zrb5gdf5qs-stdenv-linux.drv»;
+  strictDeps = false;
+  system = "x86_64-linux";
+  tests = { ... };
+  type = "";
+  userHook = null;
+  version = "2.12.1";
+}
+```
+
+So well, all of these attributes do describe how to do the build but these are only really added for the nix evaluations
+so you can use these attributes for your nix code, so you can access like, I mean, `meta = { ... }` is important, a lot of 
+these are very important, like `propagatedBuildInputs`, or you might access it for debugging, I guess that's nice but otherwise
+they aren't used for anything and they're essentially thrown away if you don't access them. The thing that underneath stores
+ the build recipe is this path here, and it's actually when you do `derivationStrict` not only does it compute these paths and
+return it, it also writes to this path (`drvPath`), it doesn't write to these paths, (`lib`, `out`), derivation computation
+only writes to this one and so if you look at this one now 41.31
