store paths, derivations

--- a/5/5.md
+++ b/5/5.md
@@ -578,7 +578,7 @@ oh the completion doesn't work there, there is also no hash attribute here and s
 `.overrideAttrs`, well we could set these attributes, like we could say:
 
 ```nix
-nix-repl> airshipper.drvAttrs.cargoDeps.overrideAttrs (old: { sha256 = "something"; })
+nix-repl> airshipper.drvAttrs.cargoDeps.overrideAttrs (old: { Sha256 = "something"; })
 ```
 This wouldn't actually influence the derivation because it's only gonna set an environment variable liket his to this value,
 (`"sometething"`), it doesn't change the underlying output hash here that nix uses, (`...drv.Attrs.outputHash`).
@@ -976,4 +976,251 @@ these are very important, like `propagatedBuildInputs`, or you might access it f
 they aren't used for anything and they're essentially thrown away if you don't access them. The thing that underneath stores
  the build recipe is this path here, and it's actually when you do `derivationStrict` not only does it compute these paths and
 return it, it also writes to this path (`drvPath`), it doesn't write to these paths, (`lib`, `out`), derivation computation
-only writes to this one and so if you look at this one now 41.31
+only writes to this one and so if you look at this one now (`drvPath`), let's do `cat /nix/store..foo.drv`) we can see in here
+that's the, the format of derivation files, they have kind of a, I think it's a python-like format which nix reads, so here 
+we have the outputs that we have, we have lib output, and the output, we have the system, builder, arguments and so on and 
+then all the environment variables down here.
+
+Julian Debon: So it means that derivation and derivationStrict are not pure, right? They write to the store.
+
+Silvan: Yeah you can say that yes.. it's.. I wouldn't say they're like actually pure, it's more of an implementation detail to
+how it's done that might actually change in the future.
+
+Yuriy Taraday: Is that because every derivation is content addressable? It's just caching, it's not impurity I guess. Right? 
+So you will not write anything different to the same store path of a derivation, anything else about the content that it got.
+
+Silvan: Yeah, it does really have the side effect of writing something to the store during the evaluation which is a bit impure
+but in practice it's not a problem. Yeah, and I just wanted to mention there's `nix show-derivation` which shows you this
+in a JSON which is nice. 
+
+Q: Is there a reason why the JSON format was not chosen for the derivation file itself?
+
+Silvan: I think probably because this format is like 20 years old, that might be the reason yeah
+
+Yuriy Taraday: But also JSON is not the best format, so probably it was expected to have as simple to parse and as strict
+format as possible.
+
+Silvan: Yeah, okay, I feel like nowadays JSON might be an acceptable candidate but yeah, there's also other formats that
+could be chosen. I think this is nice that still it's a string and not like a binary format but honestly you have to
+show derivation so you don't really need to look at this.
+
+Yeah, something else I can show in here, in this case, this derivation doesn't have any inputs, well there's two
+kinds of inputs, derivations (`"inputDrvs": {},`), and sources (`"inputSrc": [],`), sources are just files, and
+derivations are actual other derivations. If we look at the hello derivation.
+
+Let's do `nix-instantiate` to just evaluate some nix code and return the derivation and let's just do hello here:
+
+```nix
+❯ nix-instantiate '<nixpkgs>' -A hello
+warning: you did not specify '--add-root'; the result might be removed by the garbage collector
+/nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv
+```
+
+Then `nix show-derivation` on that:
+
+```nix
+❯ nix show-derivation /nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv
+warning: 'show-derivation' is a deprecated alias for 'derivation show'
+{
+  "/nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv": {
+    "args": [
+      "-e",
+      "/nix/store/v6x3cs394jgqfbi0a42pam708flxaphh-default-builder.sh"
+    ],
+    "builder": "/nix/store/5mh7kaj2fyv8mk4sfq1brwxgc02884wi-bash-5.2p37/bin/bash",
+    "env": {
+      "__structuredAttrs": "",
+      "buildInputs": "",
+      "builder": "/nix/store/5mh7kaj2fyv8mk4sfq1brwxgc02884wi-bash-5.2p37/bin/bash",
+      "cmakeFlags": "",
+      "configureFlags": "",
+      "depsBuildBuild": "",
+      "depsBuildBuildPropagated": "",
+      "depsBuildTarget": "",
+      "depsBuildTargetPropagated": "",
+      "depsHostHost": "",
+      "depsHostHostPropagated": "",
+      "depsTargetTarget": "",
+      "depsTargetTargetPropagated": "",
+      "doCheck": "1",
+      "doInstallCheck": "1",
+      "mesonFlags": "",
+      "name": "hello-2.12.1",
+      "nativeBuildInputs": "/nix/store/096i6ysqh596z1srsh758z3swz00kmlr-version-check-hook",
+      "out": "/nix/store/a7hnr9dcmx3qkkn8a20g7md1wya5zc9l-hello-2.12.1",
+      "outputs": "out",
+      "patches": "",
+      "pname": "hello",
+      "postInstallCheck": "stat \"${!outputBin}/bin/hello\"\n",
+      "propagatedBuildInputs": "",
+      "propagatedNativeBuildInputs": "",
+      "src": "/nix/store/pa10z4ngm0g83kx9mssrqzz30s84vq7k-hello-2.12.1.tar.gz",
+      "stdenv": "/nix/store/d0gfdcag8bxzvg7ww4s7px4lf8sxisyx-stdenv-linux",
+      "strictDeps": "",
+      "system": "x86_64-linux",
+      "version": "2.12.1"
+    },
+    "inputDrvs": {
+      "/nix/store/asnfc1fbhcpnrhnk4kkrs5zrb5gdf5qs-stdenv-linux.drv": {
+        "dynamicOutputs": {},
+        "outputs": [
+          "out"
+        ]
+      },
+      "/nix/store/jyw76friy6pgv3rqvf78lqj8fy9krvz1-version-check-hook.drv": {
+        "dynamicOutputs": {},
+        "outputs": [
+          "out"
+        ]
+      },
+      "/nix/store/q63c1b6gh3i7vjw2bsvxwbbcwcnmxxk1-hello-2.12.1.tar.gz.drv": {
+        "dynamicOutputs": {},
+        "outputs": [
+          "out"
+        ]
+      },
+      "/nix/store/vrx8z3fnwbcfggqhjmj1hz4szfw59fwh-bash-5.2p37.drv": {
+        "dynamicOutputs": {},
+        "outputs": [
+          "out"
+        ]
+      }
+    },
+    "inputSrcs": [
+      "/nix/store/v6x3cs394jgqfbi0a42pam708flxaphh-default-builder.sh"
+    ],
+    "name": "hello-2.12.1",
+    "outputs": {
+      "out": {
+        "path": "/nix/store/a7hnr9dcmx3qkkn8a20g7md1wya5zc9l-hello-2.12.1"
+      }
+    },
+    "system": "x86_64-linux"
+  }
+}
+```
+
+Okay, in here we can see there is input sources,(`"inputSrcs"`), this is just a default builder, I think that's, well let's
+take a look at that, what is that:
+
+```nix
+nvim /nix/store/v6x3cs394jgqfbi0a42pam708flxaphh-default-builder.sh
+```
+
+```sh
+if [ -e "$NIX_ATTRS_SH_FILE" ]; then . "$NIX_ATTRS_SH_FILE"; elif [ -f .attrs.sh ]; then . .attrs.sh; fi
+
+source $stdenv/setup
+genericBuild
+```
+
+Oh, that just calls `genericBuild` so this is the standard env builder which does all the phases and stuff. And `inputDrvs` in here
+we have the `stdenv`, we have the `hello` source, and we have the bash, and so this is something these derivations track, this
+is a bit inconvenient to work with, just looking at the `inputDrvs` here, so can also use nix store for that:
+
+```nix
+nix-store --query
+```
+
+`nix-store --queary` allows you to get all this information in a command. So here there is bunch of useful flags:
+
+```nix
+❯ nix-store --query --
+--binding            -- Print the value of an attribute of the store derivations
+--deriver            -- Print the deriver of the store paths
+--force-realise      -- Realise each argument to the query first
+--graph              -- Print the references graph of the store paths in Graphviz format
+--hash               -- Print the SHA-256 hash of the contents of the store paths
+--outputs            -- Print the output paths of the given store derivations
+--references         -- Print immediate dependencies of the given store paths
+--referrers-closure  -- Print the closure under the referrers relation
+--referrers          -- Print store paths which refer to these paths
+--requisites         -- Print the closure of the given store paths
+--roots              -- Print the garbage collector roots that point to the store paths
+--size               -- Print the size in bytes of the contents of the store paths
+--tree               -- Print the references graph of the store paths as an ASCII tree
+--use-output         -- Apply the query to the output path of any store derivations
+```
+
+Immediate dependencies, I think this is essentially the `inputDrvs` so let's print this:
+
+```nix
+nix-store --query --references
+```
+
+of hash.. here:
+
+```nix
+❯ nix-store --query --references /nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv
+/nix/store/v6x3cs394jgqfbi0a42pam708flxaphh-default-builder.sh
+/nix/store/vrx8z3fnwbcfggqhjmj1hz4szfw59fwh-bash-5.2p37.drv
+/nix/store/asnfc1fbhcpnrhnk4kkrs5zrb5gdf5qs-stdenv-linux.drv
+/nix/store/jyw76friy6pgv3rqvf78lqj8fy9krvz1-version-check-hook.drv
+/nix/store/q63c1b6gh3i7vjw2bsvxwbbcwcnmxxk1-hello-2.12.1.tar.gz.drv
+```
+
+Yeah, okay, and here we get these four paths we've seen earlier and we can also get the closure of this,
+so all the files, all the derivations that these also depend on and recursively set, this would be
+`--requisites`, yes:
+
+```nix
+❯ nix-store --query --requisites /nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv
+/nix/store/001gp43bjqzx60cg345n2slzg7131za8-nix-nss-open-files.patch
+/nix/store/026i5h3a3pg28dxgv1x90117z6diha3x-byacc-20240109.tgz.drv
+/nix/store/0m4y3j4pnivlhhpr5yqdvlly86p93fwc-busybox.drv
+/nix/store/i9nx0dp1khrgikqr95ryy2jkigr4c5yv-unpack-bootstrap-tools.sh
+/nix/store/xjkydxc0n24mwxp8kh4wn5jq0fppga9k-bootstrap-tools.tar.xz.drv
+/nix/store/05q48dcd4lgk4vh7wyk330gr2fr082i2-bootstrap-tools.drv
+... # (366 lines)
+```
+
+So this is a whole bunch of things, the dependency chain goes quite deep, so we have like 300 dependencies about,
+there's also other flags here which can go the other way, we have `--referrers`, this tells you which other paths
+reference this one, refers closure, the closure of that, there's also short flags to some of these, that's nice,
+and also gc `--roots`, `--hash`, I haven't used all of these actually, `--deriver` is also actually kind of useful,
+so let's say we were to build a derivation, so we'll nix instantiate, evaluates to derivation:
+
+```nix
+❯ nix-instantiate '<nixpkgs>' -A hello
+warning: you did not specify '--add-root'; the result might be removed by the garbage collector
+/nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv
+```
+
+We can then build this derivation path with `nix-store --realise`:
+
+```nix
+❯ nix-store --realise /nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv
+this path will be fetched (0.05 MiB download, 0.22 MiB unpacked):
+  /nix/store/a7hnr9dcmx3qkkn8a20g7md1wya5zc9l-hello-2.12.1
+copying path '/nix/store/a7hnr9dcmx3qkkn8a20g7md1wya5zc9l-hello-2.12.1' from 'https://cache.nixos.org'...
+warning: you did not specify '--add-root'; the result might be removed by the garbage collector
+/nix/store/a7hnr9dcmx3qkkn8a20g7md1wya5zc9l-hello-2.12.1
+```
+
+Well this time it was already cached locally but it could substitute it or build it locally if it didn't exist yet.
+But now let's say we have this path and we don't know which derivation produced it, now we can use:
+
+```nix
+❯ nix-store --query --deriver /nix/store/a7hnr9dcmx3qkkn8a20g7md1wya5zc9l-hello-2.12.1
+/nix/store/pznj731mjim1xdd5mir97l20pk3gy5a8-hello-2.12.1.drv
+```
+
+This gives us back the `drv` path, this doesn't always work though, let's see for example, let's fetch the latest
+master version here:
+
+```sh
+git pull
+```
+
+```sh
+git pull origin master
+```
+
+I just want to have a derivation that's built in hydra but not locally, so let's see, let's do:
+
+```nix
+nix-instantiate '<nixpkgs>' -A hello
+nix-instantiate -A hello
+```
+
+So this derivation, let's see 48.32
